# IronShim-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: advanced-verification.yml  ci.yml
docs/: ARCHITECTURE.md  ARTIFACT_CHAIN.md  LIVE_VALIDATION.md  OPERATIONS.md  README.en.md  README.tr.md  SECURITY_MODEL.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: manifest_blob.rs  pci_blob.rs
src/: dma.rs  driver.rs  interrupt.rs  lib.rs  linux_backend.rs  platform.rs  resource.rs  tests.rs  verification.rs
src/mock/: mod.rs
